test_regress/t/t_math_shortreal_unsup_bad.out
%Warning-SHORTREAL: t/t_math_shortreal_unsup_bad.v:9:4: Unsupported: shortreal being promoted to real (suggest use real instead)
    9 |    shortreal s;
      |    ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Error: Exiting due to
